# onnx-flatbuffers

./: IMPLEMENTATION.md  README.md  pyproject.toml
onnx-flatbuffers/: onnx.fbs  onnx_mod.fbs
onnx-flatbuffers/cpp/: onnx_generated.h  onnx_mod_generated.h
onnx-flatbuffers/python/: onnx_mod_generated.py
onnx-flatbuffers/python/onnx/: Attribute.py  AttributeProto.py  AttributeType.py  DataType.py  DeviceConfiguration.py  Dimension.py  DimensionValue.py  DimensionValueType.py  Function.py  FunctionProto.py  Graph.py  GraphProto.py  IntIntListEntry.py  MapType.py  Model.py  ModelProto.py  Node.py  NodeDeviceConfiguration.py  NodeProto.py  OperatorSetId.py  OperatorSetIdProto.py  OperatorStatus.py  OptionalType.py  SequenceType.py  Shape.py  ShardedDim.py  ShardingSpec.py  SimpleShardedDim.py  SparseTensor.py  SparseTensorProto.py  SparseTensorType.py  StringStringEntry.py  StringStringEntryProto.py  Tensor.py  TensorAnnotation.py  TensorDataLocation.py  TensorProto.py  TensorSegment.py  TensorShapeProto.py  TensorType.py  (+9 more)
onnx-flatbuffers/rust/: onnx_generated.rs  onnx_mod_generated.rs
onnxfbs/: AttributeProto.py  TypeProto.py  Version.py
onnxfbs/TypeProto_/: Optional.py
onnxfbs/conversion/: protobuf_to_flatbuffers.py
onnxfbs/protos/: AttributeProto.py  FunctionProto.py  GraphProto.py  ModelProto.py  NodeProto.py  OperatorSetIdProto.py  SparseTensorProto.py  TensorAnnotation.py  TensorProto.py  TensorShapeProto.py  TrainingInfoProto.py  TypeProto.py  ValueInfoProto.py
onnxfbs/protos/AttributeProto_/: AttributeType.py
onnxfbs/protos/TensorProto_/: DataLocation.py  DataType.py
onnxfbs/protos/TensorShapeProto_/: Dimension.py
onnxfbs/protos/TypeProto_/: Anonymous1.py  Map.py  Optional.py  Sequence.py  SparseTensor.py  Tensor.py
src/onnx_flatbuffers/: __init__.py  examples.py  fbs.py  fbs.pyi  serialization.py
tools/: convert_pb.py  generate.sh
(+9 files in other folders)
