[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx-flatbuffers"
version = "0.1.0"
description = "Flatbuffers schema and Python bindings for ONNX"
authors = [
    {name = "ONNX Contributors", email = "onnx-technical-discuss@lists.lfaidata.foundation"},
]
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
classifiers = [
  "Development Status :: 3 - Alpha",
]
dependencies = []

[project.urls]
Homepage = "https://onnx.ai/ir-py"
Issues = "https://github.com/onnx/ir-py/issues"
Repository = "https://github.com/onnx/ir-py"

[tool.pytest.ini_options]
addopts = "--tb=short --color=yes"
